--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.0  # add dependency for Firebase Core
+  firebase_auth: ^0.14.0+5
+  flutter_twitter_login: ^1.1.0
+  firebase_analytics: ^1.0.4  # add dependency for Google Analytics for Firebase
 
 
   # The following adds the Cupertino Icons font to your application.
