--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   firebase_auth: ^0.14.0+5
   flutter_twitter_login: ^1.1.0
   firebase_analytics: ^1.0.4  # add dependency for Google Analytics for Firebase
+  device_info: ^0.4.0+2
+  json_annotation: ^2.0.0
+  http: ^0.12.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
