--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   device_info: ^0.4.0+2
   json_annotation: ^2.0.0
   http: ^0.12.2
+  twitter_api: ^0.1.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
