--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   json_annotation: ^2.0.0
   http: ^0.12.2
   twitter_api: ^0.1.2
+  fluttertoast: ^7.1.8
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
